[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-asset-server"
version = "0.1.0"
description = "MCP server for 2D game asset generation via OpenRouter"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx",
]

[project.scripts]
game-asset-server = "server:main"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
